...
        tabBar={(props) => <BottomTabBar {...props} />}
      >
        <Tabs.Screen
          name="index"
          options={{
            title: t("nav.home"),
            tabBarButtonTestID: "tab-home",
          }}
        />
        <Tabs.Screen
          name="packs"
          options={{
            title: t("nav.pack"),
...
